Final for now :D.

--- a/tex/NeuronModeling.tex
+++ b/tex/NeuronModeling.tex
@@ -18,43 +18,35 @@
 
 \tableofcontents
 \newpage
-\title{TO DO}
-\begin{enumerate}
-    \item Науката за невроните и приложение
-    \item Структура на неврона
-        \begin{enumerate}
-            \item Обобщено устройство на неврона
-            \item Синапси
-        \end{enumerate}
-    \item Мембрана на неврона
-    \item Аксонът на Ходжкинс-Хъксли
-        \begin{enumerate}
-            \item Изравняване на напрежението (Voltage Clamping)
-        \end{enumerate}
-    \item Извеждане на математическия модел и метод за решаване
-    \item Програмна реализация на математическия модел и анимация
-\end{enumerate}
 
 \section{Науката за невроните и приложение}
 
-Мозъкът, намиращ се в черепната кухина, е част от централната нервна ссистема. Той е основният орган, който обработва всички съзнателни и
-несъзнателни стимули, чувства,  познания и памет. Също така е отговрен за контролирането на множество други органи. Основната градивна
-единица на мозъка е неврона. Човешкия мозък съдържа около   неврона. Невронните клетки приемат, обработват и изпращат нервния импулс.
-Животните реагират на външни въздействия, използвайки невроните.  Например при заплаха от изгаряне, рецепторите за топлина на сензорен
-неврон осъществяват връзка със стимула и изпращат информация до интер-неврон в централната нервна система. От там мото-неврон изпраща
-отговорът до скелетните мускули, които карат тялото да се отдръпне. В основата на извършването на този процес стои невротрансмисията, която
-се извършва във всични неврони в човешкото тяло. Невроните пренасят тази информация чрез промени в електричесния потенциал на мембраната.
+Мозъкът, намиращ се в черепната кухина, е част от централната нервна система. Той е основният орган, който обработва всички съзнателни и
+несъзнателни стимули, чувства,  познания и памет. Също така е отговорен за контролирането на множество други органи. Основната градивна
+единица на мозъка е невронът. Човешкият мозък съдържа около $10^{11}$ неврона. Нервните клетки приемат, обработват и изпращат нервния импулс.
 
-Пример за заболяване, пряко свързано с протичането на нервните импулси, е множествената склероза. Множествената склероза засяга способността на нервните клетки на главния и гръбначния мозък да комуникират помежду си.Аксоните са обгърнати от изолираща субстанция – миелин. При МС собствената имунна система атакува и унищожава миелиновото покритие. Когато миелинът бъде загубен, аксоните не могат да провеждат ефективно сигналите. Въпреки обширните познания за протичането и прогресирането на заболяването, пусковият механизъм остава засега неизвестен. Не съществува познато лекарство за множествена склероза. Лечението е насочено към възстановяване на функциите след пристъп, превенция от нови пристъпи и предотвратяване на трайната инвалидизация.
+Животните реагират на външни въздействия, използвайки невроните.  Например, при заплаха от изгаряне, рецепторите за топлина на сензорен
+неврон осъществяват връзка със стимула и изпращат информация до интер-неврон в централната нервна система. Оттам мото-неврон изпраща
+отговора до скелетните мускули, които карат тялото да се отдръпне. В основата на извършването на този процес стои невротрансмисията, която
+се извършва във всички неврони в човешкото тяло. Невроните пренасят тази информация чрез промени в електрическия потенциал на мембраната.
+
+Науката, която се занимава с изследването на нервната система, е изключително обширна. Тя се разделя на много дялове, като те обващат най-различни аспекти -- от изучаването на невроните на клетъчно ниво, психология, клинична част, занимаваща се със заболявания на нервната система, до приложения на невронните мрежи, чрез които се симулират реални процеси чрез компютри и много други.
+
+В последните десетилетия чрез науката за невроните хората успяват да изучат много болести, като също така предоставят адекватно лечение или подобрение при пациентите, въпреки това някои процеси остават загадка и предизвикателство, което да бъде разрешено вбъдеще. Пример за заболяване, пряко свързано с протичането на нервните импулси, е множествената склероза. Множествената склероза (MC) засяга способността на нервните клетки на главния и гръбначния мозък да комуникират помежду си. Аксоните са обгърнати от изолираща субстанция – миелин. При МС собствената имунна система атакува и унищожава миелиновото покритие. Когато миелинът бъде загубен, аксоните не могат да провеждат ефективно сигналите. Въпреки обширните познания за протичането и прогресирането на заболяването, пусковият механизъм остава засега неизвестен. Не съществува познато лекарство за множествена склероза. Лечението е насочено към възстановяване на функциите след пристъп, превенция от нови пристъпи и предотвратяване на трайната инвалидизация.
 
 \section{Устройство на неврона}
+За да можем моделираме протичането на нервния импулс, трябва да се запознаем с устройството на неврона и да разберем какви процеси протичат в него. Накратко ще разгледаме основните части, изграждащи нерврона и осъществяващи преноса на сигнали.
 
 \textbf{аксон} -- най-издълженият израстък на неврона, чиято дължина може да надхвърли десетки хиляди пъти диаметъра на клетъчното тяло. Аксонът
-извежда нервните импулси от клетъчното тяло, пренасяйки информация до друга клетка. Нервните импулси са еднопосочни в аксонът, но невронът
-може да получи информация под формата на протеини които се придвижват от синапса до клетъчното ядро. Много неврони имат само един аксон, но
-той се разклонява в много направления и така прави възможна комуникацията с много клетки. 
+извежда нервните импулси от клетъчното тяло, пренасяйки информация до друга клетка. Нервните импулси са еднопосочни , но невронът
+може да получи информация под формата на протеини които се придвижват от синапса до клетъчното ядро. В своя край аксонът се разклонява в образувания, наречени терминали. Тези акосанални терминали осъществяват връзката с клетките, които трябва да получат сигнала.  Много неврони имат само един аксон, но
+той се разклонява в много направления и така прави възможна комуникацията с много клетки.
+
+\textbf{дендритни дървета} -- изградени от разклонени израстъци на нервната клетка. Повечето неврони получават сигнали през своите дентритни дървета. Един неврон може да има повече от една група дендрити, чрез които получава хиляди сигнали.
 
 \textbf{клетъчна мембрана} -- плазмената мембрана е изградена от двоен липиден слой. В него са вградени мембранни белтъци, които изпълняват важни функции: транспортни, енергетични, структурни, сензорни. Строежът, съставът и формата на една мембрана не са постоянни, а динамично се изменят според функциите, които трябва да извършва и според състоянието на клетката.
+
+\textbf{синапси} -- специфични структури, осъществящи провеждането на нервния импулс. За целите на нашата задача ще разгледаме химическия синапс. Химическият синапс е специално съединение между два неврона, което позволява те да си комуникират без да са физически свързани.
 
 \section{Моделиране на електрическите свойства на клетъчната мембрана}
 Тъй като електрическите сигнали са в основната на преноса на информация в нервната система, е необходимо да разберем как се пораждат и пренасят тези сигнали. Проблем при невроните представляват акосните, тъй като те са дълги и не са добри проводници. За да се компенсира този недостатък, невроните развиват система, която им помага да пренасят сигнали на голямо разтояние, въпреки техните лоши електрически характеристики.  Електрическите сигнали, възпроизведени от тази система, се наричат акционни потенциали или импулси. Ключова роля в тази система заема клетъчната мембрана.
@@ -64,10 +56,10 @@
 \vspace{5mm} %5mm vertical space
 \textbf{Видове йони, намиращи се в клетката}
 
-В невроните и обграждащата ги течност, най-често срещани са следните йони:
+В невроните и обграждащата ги течност най-често срещани са следните йони:
 \begin{itemize}
   \item положително заредени -- натриеви и калиеви
-  \item отрицателно заредени -- хлоридни
+  \item отрицателно заредени -- хлорни
 \end{itemize}
 
 В повечето неврони К+ йони са с по-голяма концентрация във вътрешността на клетката. Обратно, обикновено, Na+ и Cl- са с по-голяма концентрация извън клетката
@@ -75,7 +67,7 @@
 \vspace{5mm}
 \textbf{Как йоните преминават през мембраната}
 
-Тъй като са заредени, йоните не могат да преминат директно през хидрофобните липидни области на мембраната. Вместо това те трябва да използват специализираните протеини, които образуват хидрофилен тунел през мембраната. Някои от каналчетата са отворени, когато неврона е в покой, а други се активирит при въздействие от сигнал. Някои йонни каналчета са избрителни спрямо пропускливостта на различните видове неврони, съответно се наричат калиеви и натриеви каналчета. При невроните равновесният потенциал се влия главно от движението на К+ през калиевите каналчета.
+Тъй като са заредени, йоните не могат да преминат директно през хидрофобните липидни области на мембраната. Вместо това те трябва да използват специализираните протеини, които образуват хидрофилен тунел през мембраната. Някои от каналчетата са отворени, когато невронът е в покой, а други се активирит при въздействие от сигнал. Някои йонни каналчета имат избирателна пропускливост спрямо различните видове неврони, съответно се наричат калиеви и натриеви каналчета. При невроните равновесният потенциал се влие главно от движението на К+ през калиевите каналчета.
 
 \vspace{5mm} %5mm vertical space
 
@@ -94,23 +86,23 @@
 
 Равновесният потенциал се определя от неравното разпределение на йони между вътрешността и външната среда на клетката и различната пропускливост на клетката към различните видове йони.
 
+
 \vspace{5mm} %5mm vertical space
-\textbf{Общо описание на процеса на невротрансмисия}
-Навлизащите в клетката сигнали могат да бъдат стимулиращи, които възбуждат неврона, т.е. генерират електрически импулс, или инхибиращи - предотвратят неврона от активиране. Повечето неврони получават сигнали през своите дентритни дървета. Един неврон може да има повече от една група дендрити, чрез които получава хиляди сигнали. Дали един неврон ще е активиран зависи от сумата на възбуждащите и възпиращите сигнали.
-В своя край аксонът се разклонява в образувания, наречени терминали. Тези акосанални терминали осъществяват връзката с клетките, които трябва да получат сигнала. В повечето синапси информацията се предава чрез химически съобщения, наречени невротрансмитери. Когато акционният потенциал преминава по аксона и достига аксонния терминал, той отключва освобождаването на невротрансмитер в синаптичната цепнатина.
+\subsection{Процесът на невротрансмисия и акционният потенциал}
+В нервната клетка навлизат два вида сигнали, които могат да бъдат стимулиращи, които възбуждат неврона, т.е. генерират електрически импулс, или инхибиращи - предотвратят неврона от активиране.  Дали един неврон ще е активиран зависи от сумата на възбуждащите и възпиращите сигнали.
+Връзката между два неврона се осъществява чрез синапси. В повечето синапси информацията се предава чрез химически съобщения, наречени невротрансмитери. Когато акционният потенциал преминава по аксона и достига аксонния терминал, той отключва освобождаването на невротрансмитер в синаптичната цепнатина.
 
-Невротрансмитърите прекосяват синапса и се смесват с мембранните рецептори на постсинаптичната клетка, предавайки стимулиращия или инхибиращ сигнал. Химическият синапс е специално съединение между два неврона, което позволява те да си комуникират без да са физически свързани. Невронът завършва с малко разширение, наречено присинаптичен терминал. От другата страна на неврона имаме постсинаптичен терминал. Акционният потенциал кара калциевите йонни каналчета на терминала да се отворят. Невротрансмитерите се освобождават чрез екзоцитоза. Те бързо дифузират в синаптичната празнина. Когато достатъчно калиеви каналчета се отворят, постсинаптичната празнина се деполяризира и акционният потенциал продължава по неврона. Това води до деполяризация (смяна на поляритета) -- отвътре клетката се зарежда положително. Следва реполяризация и се получава акционен потенциал. Промените в мембраната  са израз на възбуждане и се наричат възбуждащ постсинаптичен потенциал. Големината на постсинаптичния потенциал зависи от количеството на отделения медиатор и от чувствителността на постсинаптичната мембрана.
+Невротрансмитърите прекосяват синапса и се смесват с мембранните рецептори на постсинаптичната клетка, предавайки стимулиращия или инхибиращ сигнал. Невронът завършва с малко разширение, наречено присинаптичен терминал. От другата страна на неврона имаме постсинаптичен терминал. Акционният потенциал кара калциевите йонни каналчета на терминала да се отворят. Невротрансмитерите се освобождават чрез екзоцитоза. Те бързо дифузират в синаптичната празнина. Когато достатъчно калиеви каналчета се отворят, постсинаптичната празнина се деполяризира и акционният потенциал продължава по неврона. Това води до деполяризация (смяна на поляритета) -- отвътре клетката се зарежда положително. Следва реполяризация и се получава акционен потенциал. Промените в мембраната  са израз на възбуждане и се наричат възбуждащ постсинаптичен потенциал. Големината на постсинаптичния потенциал зависи от количеството на отделения медиатор и от чувствителността на постсинаптичната мембрана.
 
-
-
-
-\subsection{Акционен потенциал}
+\vspace{5mm} %5mm vertical space
+\textbf{Акционен потенциал}
 Когато входен сигнал достигне тялото на клетката, невронът ще ускори разпространяваща се промяна в мембранния потенциал. Преминаващата вълна на електричество се нарича акционен потенциал. Акционните потенциали преминават с константна скорост от около 100m/s и с константна честота. 
-В спокойно състояние невроните имат равновесен потенциал от -60 до -70 миливолта. Това означава, че вътрешната част на клетката е отрицателно заредена.
+В спокойно състояние невроните имат равновесен потенциал от -60 до -70 mV. Това означава, че вътрешната част на клетката е отрицателно заредена.
 
+\vspace{5mm} %5mm vertical space
 \textbf{Цикъл на акционния потенциал}
 
-Акциноният потенциал се задейства, когато деполяризацията увеличи мембранното напрежение, така че де премине граничната стойност, която е обикновено -55 миливолта. При достигането на тази граница, Nа+ каналчета, зависещи от напрежението, се отварят и позволяват на натриевите йони да навлязат в клетката. Този поток от натриеви йони увеличава мембранния потенциал много бързо, докато той достигне +40 миливолта. След кратък период от време, натриевите каналчета се самодеактивират, спирайки навлизането на натрия. Множество калиеви каналчета, зависещи от напрежението, се отварят, позволявайки на калия да излезе извън клетката. Това бързо намалява мембранния потенциал, връщайки го обратно в нормалното му равновесно положение. Калиевите каналчета остават отворени по-дълго време, но в крайна сметка те се затварят и мембранни потенциал се стабилизира. Натриевите каналчета се връщат в нормалното си състояние, затворени, но очакващи стимулиращо напрежение. Така цикълът на акционния потенциал може да започне отново.
+Акциноният потенциал се задейства, когато деполяризацията увеличи мембранното напрежение, така че де премине граничната стойност, която е обикновено -55 mV. При достигането на тази граница, Nа+ каналчета, зависещи от напрежението, се отварят и позволяват на натриевите йони да навлязат в клетката. Този поток от натриеви йони увеличава мембранния потенциал много бързо, докато той достигне +40 mV. След кратък период от време, натриевите каналчета се самодеактивират, спирайки навлизането на натрия. Множество калиеви каналчета, зависещи от напрежението, се отварят, позволявайки на калия да излезе извън клетката. Това бързо намалява мембранния потенциал, връщайки го обратно в нормалното му равновесно положение. Калиевите каналчета остават отворени по-дълго време, но в крайна сметка те се затварят и мембранни потенциал се стабилизира. Натриевите каналчета се връщат в нормалното си състояние, затворени, но очакващи стимулиращо напрежение. Така цикълът на акционния потенциал може да започне отново.
 
 \vspace{5mm} %5mm vertical space
 \textbf{Предаване на сигнала от акционния потенциал}
@@ -120,7 +112,20 @@
 \vspace{5mm} %5mm vertical space
 \subsection{Мембраната като електрическа верига}
 
-За да можем да моделираме електрическите свойства на мембраната, ще ги представим като елементи в еквивалентната и електрическа схема. Хидрофилните участатъци на молекулите, изграждащи клетъчната мембрана, притежават способността да се йонизират, а хидрофобните участаци образуват централен диелектричен слой. Така можем да определим клетъчната мембрана като кондензатор, който се характеризира с електричен капацитет. Капацитетът на един кондензатор, c, расте с увеличаване на площта на плочите, A, и намалява с увеличаване на разстоянието между тях, d. В биологичните мембрани дебелината на хидрофобния участък от липидния бислой е много малка – около 2.5 nm. Това определя много висока стойност на мембранния капацитет – близо до 1 /микрофарада/ .  Използваме следната формула за изчисляване на “специфичния капацитет” /тук слагаме формула/. Натрупването на заряд от двете страни на мембраната, получен от разликата в концентрацията на йоните, предизвиква потенциална разлика между вътрешната и външната част на клетката. Тя може да бъде измерена с формулата /тук слагаме формулата/. Тъй като капацитетът на мембраната е голям, дори натрупването на малък заряд от двете и страни води до голяма потенциална разлика./тук има за довършване/  
+За да можем да моделираме електрическите свойства на мембраната, ще ги представим като елементи в еквивалентната \'{и} електрическа схема. Хидрофилните участатъци на молекулите, изграждащи клетъчната мембрана, притежават способността да се йонизират, а хидрофобните участаци образуват централен диелектричен слой. Така можем да определим клетъчната мембрана като кондензатор, който се характеризира с електричен капацитет. Капацитетът на един кондензатор, $c$, расте с увеличаване на площта на плочите, $A$, и намалява с увеличаване на разстоянието между тях, $d$. В биологичните мембрани дебелината на хидрофобния участък от липидния бислой е много малка – около 2.5 nm. Това определя много висока стойност на мембранния капацитет – близо до 1 $\mu F/cm^2$ .  Използваме следната формула за изчисляване на “специфичния капацитет”: $C_{m}=\frac{c}{A}=\frac{\epsilon}{d}$. Натрупването на заряд от двете страни на мембраната, получен от разликата в концентрацията на йоните, предизвиква потенциална разлика между вътрешната и външната част на клетката. Тя може да бъде измерена с формулата $Q=CV$. Тъй като капацитетът на мембраната е голям, дори натруDпването на малък заряд от двете \'{и} страни води до голяма потенциална разлика. 
+
+\vspace{5mm} %5mm vertical space
+\textbf{Йонни токове, протичащи през мембраната}
+
+Всеки йоннен ток се характеризира с две компоненти -- кодуктивен ток, зависещ от разликата в напреженито на мембраната, и дифузионен ток, зависещ от разликата в концентрацията на йоните. Електричното поле, което се създава от капацитета на мембраната, упражнява сила върху електрическите заряди на йоните и ги кара да се движат, това се нарича кондуктивен ток. Плътността на кондуктивния ток се определя със следното уравнение $J_c=\tilde{G}_{Na}V$, където $\tilde{G}_{Na}$ е проводимостта на натрия за определена мярка площ. Дифузионният се определя от разликата в концентрацията на йоните. Плътността на дифузионният ток може да се изрази с уравнението $J_d=-qD_{Na}\frac{d[Na+]}{dx}$, където $D_{Na}$ e дифузионната константа за натриевите йони. Имаме знак минус, защото йоните дифузират в посока, обратна на тази, където концентрацията им е по-голяма. Формулите, които използваме за натриевите йони са аналогични за другите йони. Кондуктивният ток може да стане равен на 0, когато разликата в напрежението на мемраната е 0, а дифузионният ток може да стане равен на 0, когато концентрацията на йоните от двете страни на мембраната се изравнят. 
+
+От релацията на Айнщайн (свързваща дифузионната констанстанта с хаотичното движение на частици, породено от сблъсъка им с хаотично движещите се водни молекули) и температурното равновесие имаме следния извод: $J_c + J_d = 0$.
+
+Използвайки формулата за капацитивни ток $J_{cap}=C\frac{dV}{dt}$ и горните две формули за кондуктивния и дифузионен ток, общият йонен ток, протичащ през мембраната, можем да изразим така:
+
+\begin{equation}
+        J = C\frac{dV}{dt} + J_{Na} + J_{K} + J_{Ca} + ...
+    \end{equation}
 
 \section{Модел на Ходжкин-Хъксли}
     \subsection[Експериментални методи]{Експериментални методи}
